# slim

./: .deepsource.toml  .dockerignore  .gitignore  .gitmodules  .gitpod.yml  .golangci.yml  .markdownlint.json  ADOPTERS.md  CHANGELOG.md  COMMUNITY_ACTIVITY_LOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-build  GOVERNANCE.md  LICENSE  LICENSE.md  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  WISHLIST.md  docker-slim-builder.build.sh  docker-slim-builder.run.sh  env.sh  go.mod  go.sum  lib-licenses.json  mac.src.deps.get.command  mac.src.deps.restore.command  mac.src.deps.save.command  mac.src.run.app.command  slim.report.json  src.build.sh  src.deps.and.build.sh  src.deps.clean.sh  src.deps.get.sh  src.deps.restore.sh  src.deps.save.sh  src.fmt.sh  (+2 more)
.circleci/: config.yml
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
ci-cd-integration/: README.md
ci_cd_integration/: README.md
consts/: version.go
examples/: README.md
examples/apps/rust_standard/service/: Cargo.toml
examples/apps/rust_standard/service/src/: main.rs
messages/: messages.go
packaging/: slim.spec
report/: container_report.go
sample_app/: Dockerfile  build.command  run.command
sample_artifacts/: creport.json
scripts/: bom.gen.sh  docker-builder-m1.run.sh  docker-builder.run.sh  docker-slim-builder.build.command  docker-slim-builder.build.sh  docker-slim-builder.run.command  docker-slim-builder.run.sh  env.sh  govulncheck.sh  install-dockerslim.sh  install-slim.sh  mac.bom.gen.command  mac.src.build.command  mac.src.cleanup.command  (+23 more)
(+906 files in other folders)
